Set relative js links for GitHub pages

--- a/single-input.html
+++ b/single-input.html
@@ -32,7 +32,7 @@
             </div>
         </main>
     </div>
-    <script src="/scripts/single-input.js"></script>
+    <script src="./scripts/single-input.js"></script>
 </body>
 
 </html>
