--- a/multiple-inputs.html
+++ b/multiple-inputs.html
@@ -35,7 +35,7 @@
             </div>
         </main>
     </div>
-    <script src="/scripts/multiple-inputs.js"></script>
+    <script src="./scripts/multiple-inputs.js"></script>
 </body>
 
 </html>
